tests/missing-argument-separator.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected a ',' to separate arguments or a closing parenthesis when parsing the arguments of a function type.
// CHECK-NEXT: func: (x: i32 y: i32) -> void;
// CHECK-NEXT:               ^

func: (x: i32 y: i32) -> void;
